--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
 		    <artifactId>mybatis-plus-generator</artifactId>
 		    <version>3.4.1</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.apache.velocity</groupId>
+		    <artifactId>velocity-engine-core</artifactId>
+		    <version>2.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
